# netseerPy

./: README.md  pyproject.toml
netseerPy/functions/: computeRhs.py  constraintMatrix.py
